@@ -129,8 +129,8 @@ module Solver = struct
       |> List.map (Proto.Kernel.filter_access retain_acc)
       |> List.map (
           Proto.Kernel.inline_all
-          ~block_dim:s.block_dim
-          ~grid_dim:s.grid_dim
+          ~block_dim:(Some s.block_dim)
+          ~grid_dim:(Some s.grid_dim)
           ~globals:s.params
         )
       |> List.map Proto.Kernel.opt
